Fixing pre cases.  Finished 2.15 hm-number-e.

--- a/model/hcos.tex
+++ b/model/hcos.tex
@@ -7,7 +7,7 @@ $\mathscr{E}[(\Lambda X.e_{H})\;\lbrace T\rbrace]_{H}$ & $\rightarrow$ & $\maths
 $\mathscr{E}[\mathtt{if0}\;\overline{0}\;e_{H}^{1}\;e_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}^{1}]$ \\
 $\mathscr{E}[\mathtt{if0}\;\overline{n}\;e_{H}^{1}\;e_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}^{2}]\;(n\neq0)$ \\
 $\mathscr{E}[+\;\overline{n_{1}}\;\overline{n_{2}}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
-$\mathscr{E}[-\;\overline{n_{1}}\;\overline{n_{2}}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{(max(n_{1}-n_{2},0)}]$ \\
+$\mathscr{E}[-\;\overline{n_{1}}\;\overline{n_{2}}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\overline{max(n_{1}-n_{2},0)}]$ \\
 $\mathscr{E}[\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}^{1}]$ \\
 $\mathscr{E}[\mathtt{tl}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}^{2}]$ \\
 $\mathscr{E}[\mathtt{hd}\;\mathtt{nil}^{T}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T}HS\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})]$ \\
