--- a/model/scos.tex
+++ b/model/scos.tex
@@ -8,7 +8,7 @@ $\mathscr{E}[v_{S}^{1}\;v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{w
 $\mathscr{E}[\mathtt{if0}\;\overline{0}\;e_{S}^{1}\;e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{1}]$ \\
 $\mathscr{E}[\mathtt{if0}\;v_{S}\;e_{S}^{1}\;e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{2}]\;(v_{S}\neq\overline{0})$ \\
 $\mathscr{E}[+\;\overline{n_{1}}\;\overline{n_{2}}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{n_{1}+n_{2}}]$ \\
-$\mathscr{E}[-\;\overline{n_{1}}\;\overline{n_{2}}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{(max(n_{1}-n_{2},0)}]$ \\
+$\mathscr{E}[-\;\overline{n_{1}}\;\overline{n_{2}}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{max(n_{1}-n_{2},0)}]$ \\
 $\mathscr{E}[o\;v_{S}^{1}\;v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Not\;a\;number"}]$ \\
 && ($v_{S}^{1}\neq\overline{n}$ or $v_{S}^{2}\neq\overline{n}$) \\
 $\mathscr{E}[\mathtt{hd}\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}^{1}]$ \\
