--- a/proof/cases/preservation/if-false.tex
+++ b/proof/cases/preservation/if-false.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $\mathtt{if0}\;\overline{n}\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow e_{HM}^{2}\;(n\neq0)$
 
-$\Gamma\vdash_{HM}\mathtt{if0}\;\overline{n}\;e_{HM}^{1}\;e_{HM}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}e_{HM}^{2}:T$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\Gamma\vdash_{HM}\mathtt{if0}\;\overline{n}\;e_{HM}^{1}\;e_{HM}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}e_{HM}^{2}:T$ by inversion (Lemma \ref{i}) and uniqueness of types.
 \end{case}
