--- a/proof/cases/preservation/fix.tex
+++ b/proof/cases/preservation/fix.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$\mathtt{fix}\;(\lambda x:(T\rightarrow T).e_{HM})\rightarrow e_{HM}[(\mathtt{fix}\;(\lambda x:(T\rightarrow T).e_{HM}))/x]$
+$\mathtt{fix}\;(\lambda x:T_{1}.e_{HM})\rightarrow e_{HM}[(\mathtt{fix}\;(\lambda x:T_{1}.e_{HM}))/x]$
 
-$\Gamma\vdash_{HM}\mathtt{fix}\;(\lambda x:(T\rightarrow T).e_{HM}):T$ by premise and inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}e_{HM}[(\mathtt{fix}\;(\lambda x:(T\rightarrow T).e_{HM}))/x]:T$ by 
+$\Gamma\vdash_{HM}\mathtt{fix}\;(\lambda x:T_{1}.e_{HM}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}\lambda x:T_{1}.e_{HM}:T_{1}\rightarrow T_{1}$, $\Gamma,x:T_{1}\vdash_{HM}e_{HM}:T_{1}$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{HM}e_{HM}[(\mathtt{fix}\;(\lambda x:(T\rightarrow T).e_{HM}))/x]:T_{1}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{HM}e_{HM}[(\mathtt{fix}\;(\lambda x:(T\rightarrow T).e_{HM}))/x]:T$ because $T_{1}=T$.
 \end{case}
