--- a/proof/cases/preservation/head-cons-h.tex
+++ b/proof/cases/preservation/head-cons-h.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})\rightarrow e_{H}^{1}$
 
-$\Gamma\vdash_{H}\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}):[T]$ by premise and inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}e_{H}^{1}:T$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\Gamma\vdash_{H}\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}):T$ by premise and and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T]$ and $\Gamma\vdash_{H}e_{H}^{1}:T$ by inversion (Lemma \ref{i}) and uniqueness of types.
 \end{case}
