--- a/proof/cases/preservation/hm-number-hm.tex
+++ b/proof/cases/preservation/hm-number-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$B\;\overline{n}\rightarrow\overline{n}$ where $B\in\lbrace^{N}HM^{N},\,^{N}HS,\,^{N}MH^{N},\,^{N}MS\rbrace$
+$B\;\overline{n}\rightarrow\overline{n}$ where $B\in\lbrace{^{N}HM^{N}},{^{N}MH^{N}}\rbrace$
 
-$\vdash_{HM}B\;\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{HM}\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\vdash_{HM}B\;\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{HM}\overline{n}:N$ by inversion and uniqueness of types.
 \end{case}
