--- a/proof/cases/preservation/if-true.tex
+++ b/proof/cases/preservation/if-true.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$\mathtt{if0}\;\overline{0}\;e_{HM}^{3}\;e_{HM}^{4}\rightarrow e_{HM}^{3}$
+$\mathtt{if0}\;\overline{0}\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow e_{HM}^{1}$
 
-$\Gamma\vdash_{HM}\mathtt{if0}\;\overline{0}\;e_{HM}^{3}\;e_{HM}^{4}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}e_{HM}^{3}:T$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\Gamma\vdash_{HM}\mathtt{if0}\;\overline{0}\;e_{HM}^{1}\;e_{HM}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}e_{HM}^{1}:T$ by inversion (Lemma \ref{i}) and uniqueness of types.
 \end{case}
