--- a/proof/cases/preservation/subtraction.tex
+++ b/proof/cases/preservation/subtraction.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$-\;\overline{n_{1}}\;\overline{n_{2}}]_{H}\rightarrow\overline{(max(n_{1}-n_{2},0)}$
+$-\;\overline{n_{1}}\;\overline{n_{2}}\rightarrow\overline{max(n_{1}-n_{2},0)}$
 
-$\vdash_{HM}-\;\overline{n_{1}}\;\overline{n_{2}}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{HM}\overline{(max(n_{1}-n_{2},0)}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\vdash_{HM}-\;\overline{n_{1}}\;\overline{n_{2}}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{HM}\overline{max(n_{1}-n_{2},0)}:N$ by inversion and uniqueness of types.
 \end{case}
