--- a/proof/cases/preservation/tail-nil.tex
+++ b/proof/cases/preservation/tail-nil.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $\mathtt{tl}\;\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}^{T_{1}}$
 
-$\Gamma\vdash_{HM}\mathtt{tl}\;\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}\mathtt{nil}^{T_{1}}:T$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\Gamma\vdash_{HM}\mathtt{tl}\;\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=[T_{1}]$ and $\Gamma\vdash_{HM}\mathtt{nil}^{T_{1}}:[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{HM}\mathtt{nil}^{T_{1}}:T$ because $[T_{1}]=T$.
 \end{case}
