Finished pre 2.20 hm-universal-hm.

--- a/proof/cases/preservation/hm-function-hm.tex
+++ b/proof/cases/preservation/hm-function-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{T_{1}\rightarrow T_{2}}B_{1}^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{HM})\rightarrow\lambda x_{2}:T_{1}.(^{T_{2}}B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{M})\;(^{T_{1}}B_{2}^{T_{1}}\;x_{2})))$ where $(B_{1},B_{2})\in\lbrace(HM,MH),(MH,HM)\rbrace$
+$^{T_{1}\rightarrow T_{2}}B_{1}^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{HM})\rightarrow\lambda x_{2}:T_{1}.(^{T_{2}}B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}^{T_{1}}\;x_{2})))$ where $(B_{1},B_{2})\in\lbrace(HM,MH),(MH,HM)\rbrace$
 
-$^{T_{1}\rightarrow T_{2}}B_{1}^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{HM}):T_{1}\rightarrow T_{2}$ by premise and inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  NOT DONE.
+$\Gamma\vdash_{HM}{^{T_{1}\rightarrow T_{2}}}B_{1}^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{HM}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}\rightarrow T_{2}$, $\Gamma\vdash_{HM}\lambda x_{1}:T_{1}.e_{HM}:T_{1}\rightarrow T_{2}$, $\Gamma,x_{2}:T_{1}\vdash_{HM}x_{2}:T_{1}$, $\Gamma\vdash_{HM}{^{T_{1}}B}_{2}^{T_{1}}\;x_{2}:T_{1}$, $\Gamma\vdash_{HM}(\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}^{T_{1}}\;x_{2}):T_{2}$, $\Gamma\vdash_{HM}{^{T_{2}}B}_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}^{T_{1}}\;x_{2})):T_{2}$, and $\Gamma\vdash_{HM}\lambda x_{2}:T_{1}.(^{T_{2}}B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}^{T_{1}}\;x_{2}))):T_{1}\rightarrow T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{HM}\lambda x_{2}:T_{1}.(^{T_{2}}B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}^{T_{1}}\;x_{2}))):T$ because $T_{1}\rightarrow T_{2}=T$.
 \end{case}
