--- a/proof/cases/preservation/hm-function-s.tex
+++ b/proof/cases/preservation/hm-function-s.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $^{T_{1}\rightarrow T_{2}}B_{1}\;(\lambda x_{1}.e_{S})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T_{i}^{a}].(^{T_{2}}B_{1}\;((\lambda x_{1}.e_{S})\;(B_{2}^{T_{1}}\;x_{2})))$ where $(B_{1},B_{2})\in\lbrace(HS,SH),(MS,SM)\rbrace$
 
-$\Gamma\vdash_{HM}\,^{T_{1}\rightarrow T_{2}}B_{1}\;(\lambda x_{1}.e_{S}):(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]$ by premise and inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}\lambda x_{2}:T_{1}[T_{i}/T_{i}^{a}].(^{T_{2}}B_{1}\;((\lambda x_{1}.e_{S})\;(B_{2}^{T_{1}}\;x_{2}))):(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\Gamma\vdash_{HM}\,^{T_{1}\rightarrow T_{2}}B_{1}\;(\lambda x_{1}.e_{S}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{S}\lambda x_{1}.e_{S}:TST$ by inversion.  $\Gamma,x_{2}:T_{1}[T_{i}/T_{i}^{a}]\vdash_{HM}x_{2}:T_{1}[T_{i}/T_{i}^{a}]$, $\Gamma\vdash_{S}B_{2}^{T_{1}}\;x_{2}:TST$, $\Gamma\vdash_{S}(\lambda x_{1}.e_{S})\;(B_{2}^{T_{1}}\;x_{2}):TST$, $\Gamma\vdash_{HM}^{T_{2}}B_{1}\;((\lambda x_{1}.e_{S})\;(B_{2}^{T_{1}}\;x_{2})):T_{2}[T_{i}/T_{i}^{a}]$, and $\Gamma\vdash_{HM}\lambda x_{2}:T_{1}[T_{i}/T_{i}^{a}].(^{T_{2}}B_{1}\;((\lambda x_{1}.e_{S})\;(B_{2}^{T_{1}}\;x_{2}))):T_{1}[T_{i}/T_{i}^{a}]\rightarrow T_{2}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{HM}\lambda x_{2}:T_{1}[T_{i}/T_{i}^{a}].(^{T_{2}}B_{1}\;((\lambda x_{1}.e_{S})\;(B_{2}^{T_{1}}\;x_{2}))):T$ because $T_{1}[T_{i}/T_{i}^{a}]\rightarrow T_{2}[T_{i}/T_{i}^{a}]=(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]=T$.
 \end{case}
