--- a/proof/cases/preservation/hm-number-hm.tex
+++ b/proof/cases/preservation/hm-number-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$B\;\overline{n}\rightarrow\overline{n}$ where $B\in\lbrace{^{N}HM^{N}},{^{N}MH^{N}}\rbrace$
+$^{N}AB^{N}\;\overline{n}\rightarrow\overline{n}$ where $(A,B)\in\lbrace(H,M),(M,H)\rbrace$
 
-$\vdash_{HM}B\;\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{HM}\overline{n}:N$ by inversion and uniqueness of types.
+$\vdash_{A}{^{N}A}B^{N}\;\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n}:N$ by inversion and uniqueness of types.
 \end{case}
