--- a/proof/cases/preservation/s-lump-s.tex
+++ b/proof/cases/preservation/s-lump-s.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$B_{1}^{L}\;(^{L}B_{2}\;v_{S})\rightarrow v_{S}$ where $(B_{1},B_{2})\in\lbrace(SH,HS),(SM,MS)\rbrace$
+$SA^{L}\;(^{L}AS\;v_{S})\rightarrow v_{S}$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{S}B_{1}^{L}\;(^{L}B_{2}\;v_{S}):TST$ by premise.  $\Gamma\vdash_{HM}\,^{L}B_{2}\;v_{S}:L$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}v_{S}:TST$ by inversion.
+$\Gamma\vdash_{S}SA^{L}\;(^{L}AS_{2}\;v_{S}):T$ by premise.  $T=TST$ by inversion (Lemma \ref{i}).  $\Gamma\vdash_{A}{^{L}A}S\;v_{S}:L$ by inversion and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}v_{S}:TST$ by inversion.  $\Gamma\vdash_{S}v_{S}:T$ because $TST=T$.
 \end{case}
