--- a/proof/cases/preservation/addition.tex
+++ b/proof/cases/preservation/addition.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$+\;\overline{n_{1}}\;\overline{n_{2}}\rightarrow\overline{n_{1}+n_{2}}$
+$+\;\overline{n_{1}}\;\overline{n_{2}}\rightarrow\overline{n_{1}+n_{2}}$ where $A\in\lbrace H,M\rbrace$
 
-$\vdash_{HM}+\;\overline{n_{1}}\;\overline{n_{2}}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{HM}\overline{n_{1}+n_{2}}:N$ by inversion and uniqueness of types.
+$\vdash_{A}+\;\overline{n_{1}}\;\overline{n_{2}}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n_{1}+n_{2}}:N$ by inversion and uniqueness of types.
 \end{case}
