--- a/proof/cases/preservation/head-nil.tex
+++ b/proof/cases/preservation/head-nil.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$\mathtt{hd}\;\mathtt{nil}^{T}\rightarrow\,^{T}B\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ where $B\in\lbrace HS,MS\rbrace$
+$\mathtt{hd}\;\mathtt{nil}^{T_{1}}\rightarrow{^{T_{1}}A}S\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{HM}\mathtt{hd}\;\mathtt{nil}^{T}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}\mathtt{wrong}\;\mathrm{``Empty\;list"}:TST$ and $\Gamma\vdash_{HM}{^{T}B}\;(\mathtt{wrong}\;\mathrm{``Empty\;list"}):T$ by inversion (Lemma \ref{i}) and uniqueness of types.
+$\Gamma\vdash_{A}\mathtt{hd}\;\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{S}\mathtt{wrong}\;\mathrm{``Empty\;list"}:TST$ by inversion.  $\Gamma\vdash_{A}{^{T_{1}}A}S\;(\mathtt{wrong}\;\mathrm{``Empty\;list"}):T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}{^{T_{1}}A}S\;(\mathtt{wrong}\;\mathrm{``Empty\;list"}):T$ because $T_{1}=T$.
 \end{case}
