--- a/proof/cases/preservation/hm-function-e.tex
+++ b/proof/cases/preservation/hm-function-e.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{T_{1}\rightarrow T_{2}}B\;v_{S}\rightarrow{^{T_{1}\rightarrow T_{2}}B}\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"})\;(v_{S}\neq\lambda x.e_{S})$ where $B\in\lbrace HS,MS\rbrace$
+$^{T_{1}\rightarrow T_{2}}AS\;v_{S}\rightarrow{^{T_{1}\rightarrow T_{2}}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"})\;(v_{S}\neq\lambda x.e_{S})$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{HM}\,^{T_{1}\rightarrow T_{2}}B\;v_{S}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]$, $\vdash_{S}\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}:TST$, and $\Gamma\vdash_{HM}{^{T_{1}\rightarrow T_{2}}B}\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}):(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{HM}{^{T_{1}\rightarrow T_{2}}B}\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}):T$ because $(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]=T$.
+$\Gamma\vdash_{A}{^{T_{1}\rightarrow T_{2}}A}S\;v_{S}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]$, $\vdash_{S}\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}:TST$, and $\Gamma\vdash_{A}{^{T_{1}\rightarrow T_{2}}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}):(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}{^{T_{1}\rightarrow T_{2}}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}):T$ because $(T_{1}\rightarrow T_{2})[T_{i}/T_{i}^{a}]=T$.
 \end{case}
