--- a/proof/cases/preservation/hm-label-e.tex
+++ b/proof/cases/preservation/hm-label-e.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{T^{a}}HS\;v_{S}\rightarrow\,^{T^{a}}HS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})\;(v_{S}\neq SH^{T^{a}}\;e_{H})$
+$^{T_{1}^{a}}AS\;v_{S}\rightarrow{^{T_{1}^{a}}A}S\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})$ $(v_{S}\neq SA^{T_{1}^{a}}\;B_{A})$ where $(A,B)\in\lbrace(H,e),(M,v)\rbrace$
 
-$\Gamma\vdash_{HM}\,^{T^{a}}HS\;v_{S}:T$ by premise and inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}\,^{T^{a}}HS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"}):T$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\Gamma\vdash_{A}{^{T_{1}^{a}}A}S\;v_{S}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{S}\mathtt{wrong}\;\mathrm{``Parametricity\;violated"}:TST$ by inversion.  $^{T_{1}^{a}}AS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"}):T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $^{T_{1}^{a}}AS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"}):T$ because $T_{1}^{a}[T_{i}/T_{i}^{a}]=T$.
 \end{case}
