--- a/proof/cases/preservation/hm-number-e.tex
+++ b/proof/cases/preservation/hm-number-e.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$^{N}B\;v_{S}\rightarrow\,^{N}B\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"})\;(v_{S}\neq\overline{n})$ where $B\in\lbrace HS,MS\rbrace$
+$^{N}AS\;v_{S}\rightarrow{^{N}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"})\;(v_{S}\neq\overline{n})$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{HM}{^{N}B}\;v_{S}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{S}\mathtt{wrong}\;\mathrm{``Not\;a\;number"}:TST$ by inversion.  $\vdash_{HM}\,^{N}B\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"}):N$ by inversion and uniqueness of types.  $\vdash_{HM}\,^{N}B\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"}):T$ because $N=T$.
+$\Gamma\vdash_{A}{^{N}AS}\;v_{S}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{S}\mathtt{wrong}\;\mathrm{``Not\;a\;number"}:TST$ by inversion.  $\vdash_{A}{^{N}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"}):N$ by inversion and uniqueness of types.  $\vdash_{A}{^{N}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"}):T$ because $N=T$.
 \end{case}
