--- a/proof/cases/preservation/if-true.tex
+++ b/proof/cases/preservation/if-true.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$\mathtt{if0}\;\overline{0}\;e_{HM}^{1}\;e_{HM}^{2}\rightarrow e_{HM}^{1}$
+$\mathtt{if0}\;\overline{0}\;e_{A}^{1}\;e_{A}^{2}\rightarrow e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{HM}\mathtt{if0}\;\overline{0}\;e_{HM}^{1}\;e_{HM}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}e_{HM}^{1}:T$ by inversion (Lemma \ref{i}) and uniqueness of types.
+$\Gamma\vdash_{A}\mathtt{if0}\;\overline{0}\;e_{A}^{1}\;e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}$ and $\Gamma\vdash_{A}e_{A}^{1}:T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{1}:T$ because $T_{1}=T$.
 \end{case}
