--- a/proof/cases/preservation/s-function-hm.tex
+++ b/proof/cases/preservation/s-function-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$B_{1}^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{HM})\rightarrow\lambda x_{2}.(B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}\;x_{2})))$ where $(B_{1},B_{2})\in\lbrace(SH,HS),(SM,MS)\rbrace$
+$SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{A})\rightarrow\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{A})\;(^{T_{1}}BS\;x_{2})))$ where $(A,B)\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{S}B_{1}^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{HM}):T$ by premise.  $T=TST$ by inversion (Lemma \ref{i}).  $\Gamma\vdash_{HM}\lambda x_{1}:T_{1}.e_{HM}:T_{1}\rightarrow T_{2}$, $\Gamma,x_{2}:TST\vdash_{S}x_{2}:TST$, $\Gamma\vdash_{HM}^{T_{1}}B_{2}\;x_{2}:T_{1}[T_{i}/T_{i}^{a}]$, $\Gamma\vdash_{HM}(\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}\;x_{2}):T_{2}$, $\Gamma\vdash_{S}B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}\;x_{2})):TST$, and $\Gamma\vdash_{S}\lambda x_{2}.(B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}\;x_{2}))):TST$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}\lambda x_{2}.(B_{1}^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{HM})\;(^{T_{1}}B_{2}\;x_{2}))):T$ because $TST=T$.
+$\Gamma\vdash_{S}SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{A}):T$ by premise.  $T=TST$ by inversion (Lemma \ref{i}).  $\Gamma\vdash_{A}\lambda x_{1}:T_{1}.e_{A}:T_{1}\rightarrow T_{2}$ by inversion and uniqueness of types (Lemma \ref{uot}).  $\Gamma,x_{2}:TST\vdash_{S}x_{2}:TST$ by inversion.  $\Gamma\vdash_{A}^{T_{1}}BS\;x_{2}:T_{1}[T_{i}/T_{i}^{a}]$ and $\Gamma\vdash_{A}(\lambda x_{1}:T_{1}.e_{A})\;(^{T_{1}}BS\;x_{2}):T_{2}$ by inversion and uniqueness of types.  $\Gamma\vdash_{S}SA^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{A})\;(^{T_{1}}BS\;x_{2})):TST$ and $\Gamma\vdash_{S}\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{A})\;(^{T_{1}}BS\;x_{2}))):TST$ by inversion.  $\Gamma\vdash_{S}\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{A})\;(^{T_{1}}BS\;x_{2}))):T$ because $TST=T$.
 \end{case}
