--- a/proof/cases/preservation/s-universal-hm.tex
+++ b/proof/cases/preservation/s-universal-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$B^{\forall X.T}\;(\Lambda X.e_{HM})\rightarrow B^{T[L/X]}\;((\Lambda X.e_{HM})\;\lbrace L\rbrace)$ where $B\in\lbrace SH,SM\rbrace$
+$SA^{\forall X.T_{1}}\;(\Lambda X.e_{A})\rightarrow SA^{T_{1}[L/X]}\;((\Lambda X.e_{A})\;\lbrace L\rbrace)$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{S}B^{\forall X.T}\;(\Lambda X.e_{HM}):TST$ by premise.  $\Gamma\vdash_{HM}\Lambda X.e_{HM}:\forall X.T$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}(\Lambda X.e_{HM})\;\lbrace L\rbrace:T[L/X]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{HM}B^{T[L/X]}\;((\Lambda X.e_{HM})\;\lbrace L\rbrace):T[L/X]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).
+$\Gamma\vdash_{S}SA^{\forall X.T_{1}}\;(\Lambda X.e_{A}):T$ by premise.  $T=TST$ by inversion (Lemma \ref{i}).  $\Gamma\vdash_{A}\Lambda X.e_{A}:\forall X.T_{1}$ and $\Gamma\vdash_{A}(\Lambda X.e_{A})\;\lbrace L\rbrace:T_{1}[L/X]$ by inversion and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}SA^{T_{1}[L/X]}\;((\Lambda X.e_{A})\;\lbrace L\rbrace):TST$ by inversion.  $\Gamma\vdash_{S}SA^{T_{1}[L/X]}\;((\Lambda X.e_{A})\;\lbrace L\rbrace):T$ because $TST=T$.
 \end{case}
