--- a/proof/cases/preservation/s-universal-s.tex
+++ b/proof/cases/preservation/s-universal-s.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$B_{1}^{\forall X.T}\;(^{\forall X.T}B_{2}\;v_{S})\rightarrow v_{S}$ where $(B_{1},B_{2})\in\lbrace(SH,HS),(SM,MS)\rbrace$
+$SA^{\forall X.T_{1}}\;(^{\forall X.T_{1}}AS\;v_{S})\rightarrow v_{S}$ where $A\in\lbrace H,M\rbrace$
 
-$\Gamma\vdash_{S}B_{1}^{\forall X.T}\;(^{\forall X.T}B_{2}\;v_{S}):TST$ by premise.  $\Gamma\vdash_{S}v_{S}:TST$ by inversion (Lemma \ref{i}).
+$SA^{\forall X.T_{1}}\;(^{\forall X.T_{1}}AS\;v_{S}):T$ by premise.  $T=TST$ by inversion (Lemma \ref{i}).  $\Gamma\vdash_{A}{^{\forall X.T_{1}}A}S\;v_{S}:\forall X.T_{1}$ by inversion and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{S}v_{S}:TST$ by inversion.  $\Gamma\vdash_{S}v_{S}:T$ because $TST=T$.
 \end{case}
