--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -3,7 +3,7 @@
 \onehalfspacing
 If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M,S\rbrace$.
 \begin{proof}
-By cases on the reduction $e_{A}^{1}\rightarrow e_{A}^{2}$.  Straightforward cases for Scheme preservation are omitted.
+By cases on the reduction $e_{A}^{1}\rightarrow e_{A}^{2}$.  Straightforward cases of Scheme preservation are omitted.
 \input{cases/preservation/term-application.tex}
 \input{cases/preservation/type-application.tex}
 \input{cases/preservation/if-true.tex}
