--- a/proof/lemmas/progress/uniqueness-of-types.tex
+++ b/proof/lemmas/progress/uniqueness-of-types.tex
@@ -1,8 +1,8 @@
 \begin{lemma}
 \label{uot}
 \onehalfspacing
-$e_{HM}$ has at most one type $T$ for a given context $\Gamma$.
+$e_{A}$ has at most one type $T$ for a given context $\Gamma$ where $A\in\lbrace H,M\rbrace$.
 \begin{proof}
-By structural induction on $e_{HM}$ using inversion (Lemma \ref{i}).
+By structural induction on $e_{A}$ using inversion (Lemma \ref{i}).
 \end{proof}
 \end{lemma}
