Consolidating prog cases HM and MH.

--- a/proof/cases/progress/list-ms.tex
+++ b/proof/cases/progress/list-ms.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{MS}=\mathtt{cons}\;v_{MS}^{1}\;v_{MS}^{2}$
+$e_{A}=\mathtt{cons}\;v_{A}^{1}\;v_{A}^{2}$ where $A\in\lbrace M,S\rbrace$
 
-$\mathtt{cons}\;v_{MS}^{1}\;v_{MS}^{2}$ is a value.
+$\mathtt{cons}\;v_{A}^{1}\;v_{A}^{2}$ is a value.
 \end{case}
