--- a/proof/cases/progress/nil-hm.tex
+++ b/proof/cases/progress/nil-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{HM}=\mathtt{nil}^{T}$
+$e_{A}=\mathtt{nil}^{T}$ where $A\in\lbrace H,M\rbrace$
 
 $\mathtt{nil}^{T}$ is a value.
 \end{case}
