--- a/proof/cases/progress/type-abstraction.tex
+++ b/proof/cases/progress/type-abstraction.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{HM}=\Lambda X.e_{HM}^{1}$
+$e_{A}=\Lambda X.e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
 
-$\Lambda X.e_{HM}^{1}$ is a value.
+$\Lambda X.e_{A}^{1}$ is a value.
 \end{case}
