--- a/proof/cases/progress/variable.tex
+++ b/proof/cases/progress/variable.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{HMS}=x$
+$e_{A}=x$ where $A\in\lbrace H,M,S\rbrace$
 
-Cannot occur because $e_{HMS}$ is closed.
+Cannot occur because $e_{A}$ is closed.
 \end{case}
