--- a/proof/cases/progress/term-abstraction-hm.tex
+++ b/proof/cases/progress/term-abstraction-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{HM}=\lambda x:T.e_{HM}^{1}$
+$e_{A}=\lambda x:T.e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
 
-$\lambda x:T.e_{HM}^{1}$ is a value.
+$\lambda x:T.e_{A}^{1}$ is a value.
 \end{case}
