Consolidated hs and ms into as.tex.  Delted hs and ms.  Added as.

--- a/proof/theorems/progress.tex
+++ b/proof/theorems/progress.tex
@@ -26,8 +26,7 @@ By structural induction on $e_{A}$.
 \input{cases/progress/field-s.tex}
 \input{cases/progress/fix.tex}
 \input{cases/progress/ab.tex}
-\input{cases/progress/hs.tex}
-\input{cases/progress/ms.tex}
+\input{cases/progress/as.tex}
 \input{cases/progress/sh.tex}
 \input{cases/progress/sm.tex}
 \end{proof}
