--- a/proof/theorems/progress.tex
+++ b/proof/theorems/progress.tex
@@ -27,7 +27,6 @@ By structural induction on $e_{A}$.
 \input{cases/progress/fix.tex}
 \input{cases/progress/ab.tex}
 \input{cases/progress/as.tex}
-\input{cases/progress/sh.tex}
-\input{cases/progress/sm.tex}
+\input{cases/progress/sa.tex}
 \end{proof}
 \end{theorem}
