--- a/proof/lemmas/progress/canonical-forms.tex
+++ b/proof/lemmas/progress/canonical-forms.tex
@@ -5,12 +5,10 @@ The possible syntactic forms of values of various types.
 \begin{enumerate}
 \item If $v_{A}:N$ then $v_{A}=\overline{n}$ where $A\in\lbrace H,M\rbrace$.
 \item If $v_{A}:T_{1}\rightarrow T_{2}$ then $v_{A}=\lambda x:T_{1}.e_{A}$ where $A\in\lbrace H,M\rbrace$.
-\item If $v_{H}:\forall X.T$ then $v_{H}=\Lambda X.e_{H}$ or $v_{H}=\,^{\forall X.T}HS\;v_{S}$.
-\item If $v_{M}:\forall X.T$ then $v_{M}=\Lambda X.e_{M}$ or $v_{M}=\,^{\forall X.T}MS\;v_{S}$.
-\item If $v_{H}:[T]$ then $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ or $v_{H}=\mathtt{nil}^{T}$.
-\item If $v_{M}:[T]$ then $v_{M}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ or $v_{M}=\mathtt{nil}^{T}$ or $v_{M}=\,^{[T]}MH^{[T]}\;v_{H}$.
-\item If $v_{H}:L$ then $v_{H}=\,^{L}HS\;v_{S}$.
-\item If $v_{M}:L$ then $v_{M}=\,^{L}MS\;v_{S}$.
+\item If $v_{A}:\forall X.T$ then $v_{A}\in\lbrace\Lambda X.e_{A},{^{\forall X.T}A}S\;v_{S}\rbrace$ where $A\in\lbrace H,M\rbrace$.
+\item If $v_{H}:[T]$ then $v_{H}\in\lbrace\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2},\mathtt{nil}^{T}\rbrace$.
+\item If $v_{M}:[T]$ then $v_{M}\in\lbrace\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2},\mathtt{nil}^{T},{^{[T]}M}H^{[T]}\;v_{H}\rbrace$.
+\item If $v_{A}:L$ then $v_{A}={^{L}A}S\;v_{S}$ where $A\in\lbrace H,M\rbrace$.
 \end{enumerate}
 \begin{proof}
 Immediate from the definitions of values and the typing relations.
