Good night.  Left off on case 1.22.4 AB for [T].

--- a/model/hctr.tex
+++ b/model/hctr.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 \[
-\frac{}{\Gamma\vdash_{H}N}
+\frac{}{\vdash_{H}N}
 \quad
 \frac{X\in\Gamma}{\Gamma\vdash_{H}X}
 \quad
@@ -12,7 +12,7 @@
 \]
 \bigskip
 \[
-\frac{}{\Gamma\vdash_{H}\overline{n}:N}
+\frac{}{\vdash_{H}\overline{n}:N}
 \quad
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{nil}^{T}:[T]}
 \quad
