--- a/model/mctr.tex
+++ b/model/mctr.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 \[
-\frac{}{\Gamma\vdash_{M}N}
+\frac{}{\vdash_{M}N}
 \quad
 \frac{X\in\Gamma}{\Gamma\vdash_{M}X}
 \quad
@@ -12,7 +12,7 @@
 \]
 \bigskip
 \[
-\frac{}{\Gamma\vdash_{M}\overline{n}:N}
+\frac{}{\vdash_{M}\overline{n}:N}
 \quad
 \frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{nil}^{T}:[T]}
 \quad
