--- a/proof/cases/progress/arithmetic-s.tex
+++ b/proof/cases/progress/arithmetic-s.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $e_{S}=o\;e_{S}^{1}\;e_{S}^{2}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{3}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{3}$ then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow o\;e_{S}^{3}\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{2}$ is a value or $e_{S}^{2}\rightarrow e_{S}^{4}$ or $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{2}\rightarrow e_{S}^{4}$ and $e_{S}^{1}$ is a value then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow o\;e_{S}^{1}\;e_{S}^{4}$.  If $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} and $e_{S}^{1}$ is a value then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{S}^{1}$ and $e_{S}^{2}$ are values then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow\overline{n_{1}+n_{2}}$ if $o=+$, $e_{S}^{1}=\overline{n_{1}}$, and $e_{S}^{2}=\overline{n_{2}}$ and $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow\overline{max(n_{1}-n_{2},0)}$ if $o=-$, $e_{S}^{1}=\overline{n_{1}}$, and $e_{S}^{2}=\overline{n_{2}}$ and $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow\mathtt{wrong}\;\mathrm{``Not\;a\;number"}$ otherwise.
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{3}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{3}$ then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow o\;e_{S}^{3}\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{2}$ is a value or $e_{S}^{2}\rightarrow e_{S}^{4}$ or $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{2}\rightarrow e_{S}^{4}$ and $e_{S}^{1}$ is a value then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow o\;e_{S}^{1}\;e_{S}^{4}$.  If $e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string} and $e_{S}^{1}$ is a value then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow$ \emph{\textbf{Error}:\;string}.  If $e_{S}^{1}$ and $e_{S}^{2}$ are values and $e_{S}^{1}=\overline{n_{1}}$ and $e_{S}^{2}=\overline{n_{2}}$ then $+\;\overline{n_{1}}\;\overline{n_{2}}\rightarrow\overline{n_{1}+n_{2}}$ and $-\;\overline{n_{1}}\;\overline{n_{2}}\rightarrow\overline{max(n_{1}-n_{2},0)}$.  If $e_{S}^{1}$ and $e_{S}^{2}$ are values and $e_{S}^{1}\neq\overline{n_{1}}$ or $e_{S}^{2}\neq\overline{n_{2}}$ then $o\;e_{S}^{1}\;e_{S}^{2}\rightarrow\mathtt{wrong}\;\mathrm{``Not\;a\;number"}$ otherwise.
 \end{case}
