--- a/proof/cases/progress/as.tex
+++ b/proof/cases/progress/as.tex
@@ -1,4 +1,5 @@
 \begin{case}
+\label{as}
 $e_{A}={^{T}A}S\;e_{S}^{1}$ where $A\in\lbrace H,M\rbrace$
 
 $e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}$ is a value then $T$ determines its reduction.
