--- a/proof/cases/progress/if-hm.tex
+++ b/proof/cases/progress/if-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $e_{A}=\mathtt{if0}\;e_{A}^{1}\;e_{A}^{2}\;e_{A}^{3}$ where $A\in\lbrace H,M\rbrace$
 
-$e_{A}^{1}$ is a value or $e_{A}^{1}\rightarrow e_{A}^{4}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{A}^{1}$ is a value then $e_{A}^{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{A}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $\mathtt{if0}\;e_{A}^{1}\;e_{A}^{2}\;e_{A}^{3}\rightarrow e_{A}^{2}$ if $e_{A}^{1}=\overline{0}$ or $\mathtt{if0}\;e_{A}^{1}\;e_{A}^{2}\;e_{A}^{3}\rightarrow e_{A}^{3}$ otherwise.  If $e_{A}^{1}\rightarrow e_{A}^{4}$ then $\mathtt{if0}\;e_{A}^{1}\;e_{A}^{2}\;e_{A}^{3}\rightarrow \mathtt{if0}\;e_{A}^{4}\;e_{A}^{2}\;e_{A}^{3}$.  If $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{if0}\;e_{A}^{1}\;e_{A}^{2}\;e_{A}^{3}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{A}^{1}$ is a value or $e_{A}^{1}\rightarrow e_{A}^{4}$ or $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{A}^{1}$ is a value then $e_{A}^{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{A}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $\mathtt{if0}\;\overline{n}\;e_{A}^{2}\;e_{A}^{3}\rightarrow e_{A}^{2}$ if $\overline{n}=\overline{0}$ or $\mathtt{if0}\;\overline{n}\;e_{A}^{2}\;e_{A}^{3}\rightarrow e_{A}^{3}$ otherwise.  If $e_{A}^{1}\rightarrow e_{A}^{4}$ then $\mathtt{if0}\;e_{A}^{1}\;e_{A}^{2}\;e_{A}^{3}\rightarrow \mathtt{if0}\;e_{A}^{4}\;e_{A}^{2}\;e_{A}^{3}$.  If $e_{A}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $\mathtt{if0}\;e_{A}^{1}\;e_{A}^{2}\;e_{A}^{3}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
