--- a/model/mit.tex
+++ b/model/mit.tex
@@ -2,7 +2,7 @@
 \begin{center}
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $\cdots\;\vert\;^{T}MH^{T}\;e_{H}\;\vert\;^{T}MS\;e_{S}$ \\
-$v_{M}$ & $=$ & $\cdots\;\vert\;^{[T]}MH^{[T]}\;v_{H}\;\vert\;^{L}MS\;v_{S}\;\vert\;^{\forall X.T}MS\;v_{S}$ \\
+$v_{M}$ & $=$ & $\cdots\;\vert\;^{[T]}MH^{[T]}\;(\mathtt{cons}\;e_{H}\;e_{H})\;\vert\;^{\forall X.T}MS\;v_{S}\;\vert\;^{L}MS\;v_{S}$ \\
 $T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
 $a$ & $=$ & Type labels (a, b, \ldots) \\
 $E_{M}$ & $=$ & $\cdots\;\vert\;^{T}MH^{T}\;E_{H}\;\vert\;^{T}MS\;E_{S}$
