--- a/proof/cases/progress/field-h.tex
+++ b/proof/cases/progress/field-h.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $e_{H}=f\;e_{H}^{1}$
 
-$e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}=\mathtt{cons}\;e_{H}^{2}\;e_{H}^{3}$ or $e_{H}^{1}=\mathtt{nil}^{T}$ by canonical forms (Lemma \ref{cf}).  If $e_{H}^{1}=\mathtt{cons}\;e_{H}^{2}\;e_{H}^{3}$ then $f\;e_{H}^{1}\rightarrow e_{H}^{2}$ if $f=\mathtt{hd}$ or $f\;e_{H}^{1}\rightarrow e_{H}^{3}$ if $f=\mathtt{tl}$.  If $e_{H}^{1}=\mathtt{nil}^{T}$ then $f\;e_{H}^{1}\rightarrow\,^{T}HS\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ if $f=\mathtt{hd}$ or $f\;e_{H}^{1}\rightarrow\mathtt{nil}^{T}$ if $f=\mathtt{tl}$.  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $f\;e_{H}^{1}\rightarrow f\;e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f\;e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{H}^{1}$ is a value or $e_{H}^{1}\rightarrow e_{H}^{2}$ or $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{H}^{1}$ is a value then $e_{H}^{1}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $e_{H}^{1}\in\lbrace\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4},\mathtt{nil}^{T}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{H}^{1}=\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4}$ then $\mathtt{hd}\;(\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4})\rightarrow e_{H}^{3}$ and $\mathtt{tl}\;(\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4})\rightarrow e_{H}^{4}$.  If $e_{H}^{1}=\mathtt{nil}^{T}$ then $\mathtt{hd}\;\mathtt{nil}^{T}\rightarrow{^{T}H}S\;(\mathtt{wrong}\;\mathrm{``Empty\;list"})$ and $\mathtt{tl}\;\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  If $e_{H}^{1}\rightarrow e_{H}^{2}$ then $f\;e_{H}^{1}\rightarrow f\;e_{H}^{2}$.  If $e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f\;e_{H}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
