--- a/proof/cases/progress/field-s.tex
+++ b/proof/cases/progress/field-s.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $e_{S}=f\;e_{S}^{1}$
 
-$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}=\mathtt{cons}\;e_{S}^{2}\;e_{S}^{3}$ then $f\;e_{S}^{1}\rightarrow e_{S}^{2}$ if $f=\mathtt{hd}$ or $f\;e_{S}^{1}\rightarrow e_{S}^{3}$ if $f=\mathtt{tl}$.  If $e_{S}^{1}=\mathtt{nil}$ then $f\;e_{S}^{1}\rightarrow\mathtt{wrong}\;\mathrm{``Empty\;list"}$ if $f=\mathtt{hd}$ or $f\;e_{S}^{1}\rightarrow\mathtt{nil}$ if $f=\mathtt{tl}$.  If $e_{S}^{1}=SH^{[T]}\;v_{H}$ then $v_{H}:[T]$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) and $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ or $v_{H}=\mathtt{nil}^{T}$ by canonical forms (Lemma \ref{cf}).  If $v_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ then $f\;e_{S}^{1}\rightarrow SH^{T}\;e_{H}^{1}$ if $f=\mathtt{hd}$ and $f\;e_{S}^{1}\rightarrow SH^{[T]}\;e_{H}^{2}$ if $f=\mathtt{tl}$.  If $v_{H}=\mathtt{nil}^{T}$ then $f\;e_{S}^{1}\rightarrow\mathtt{wrong}\;\mathrm{``Empty\;list"}$ if $f=\mathtt{hd}$ and $f\;e_{S}^{1}\rightarrow\mathtt{nil}$ if $f=\mathtt{tl}$.  Otherwise $f\;e_{S}^{1}\rightarrow\mathtt{wrong}\;\mathrm{``Not\;a\;list"}$.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $f\;e_{S}^{1}\rightarrow f\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $f\;e_{S}^{1}\rightarrow f\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f\;e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
+$e_{S}^{1}$ is a value or $e_{S}^{1}\rightarrow e_{S}^{2}$ or $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} by the induction hypothesis.  If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $f\;e_{S}^{1}\rightarrow f\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $f\;e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.  $e_{S}^{1}$ is a value otherwise.  If $e_{S}^{1}=\mathtt{cons}\;e_{S}^{3}\;e_{S}^{4}$ then $\mathtt{hd}\;(\mathtt{cons}\;e_{S}^{3}\;e_{S}^{4})\rightarrow e_{S}^{3}$ and $\mathtt{tl}\;(\mathtt{cons}\;e_{S}^{3}\;e_{S}^{4})\rightarrow e_{S}^{4}$.  If $e_{S}^{1}=\mathtt{nil}$ then $\mathtt{hd}\;\mathtt{nil}\rightarrow\mathtt{wrong}\;\mathrm{``Empty\;list"}$ and $\mathtt{tl}\;\mathtt{nil}\rightarrow\mathtt{nil}$.  If $e_{S}^{1}=SH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})$ then $\mathtt{hd}\;(SH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))\rightarrow SH^{T}\;e_{H}^{1}$ and $\mathtt{tl}\;(SH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))\rightarrow SH^{[T]}\;e_{H}^{2}$.  $f\;e_{S}^{1}\rightarrow\mathtt{wrong}\;\mathrm{``Not\;a\;list"}$ otherwise.
 \end{case}
